@@ -14,6 +14,7 @@ Post-v2.5.0
      * OpenFlow 1.3 Extension 230, adding OpenFlow Bundles support, is
        now implemented.  Only flow mod and port mod messages are supported
        in bundles.
+     * New OpenFlow extension NXM_NX_MPLS_TTL to provide access to MPLS TTL.
    - ovs-ofctl:
      * queue-get-config command now allows a queue ID to be specified.
      * '--bundle' option can now be used with OpenFlow 1.3.
